--- a/200제.ipynb
+++ b/200제.ipynb
@@ -161,7 +161,6 @@
    ],
    "source": [
     "from queue import Queue\n",
-    "import numpy as np\n",
     "\n",
     "K= int(input())\n",
     "\n",
@@ -173,7 +172,6 @@
     "garoMax = 0\n",
     "\n",
     "melon = [[0] * 2 for _ in range(6)]\n",
-    "#melon = np.zeros((6, 2), dtype=int)\n",
     "four = [0] * 4\n",
     "\n",
     "for i in range(6):\n",
@@ -204,7 +202,7 @@
     "\tfor i in range(lastIndex + 1):\n",
     "\t\tque.put(que.get())             \n",
     "for i in range(4):\n",
-    "       four[i] = que.get()\n",
+    "       four[i] = que.get()       \n",
     "result = ((seroMax * garoMax) - (four[1] * four[2])) * K   \n",
     "print(result)    "
    ]
@@ -233,6 +231,414 @@
     "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#11번\n",
+    "삼성전자 = 50000\n",
+    "총평가금액 = 삼성전자 * 10\n",
+    "print(총평가금액)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "298000000000000 <class 'int'>\n",
+      "50000 <class 'int'>\n",
+      "15.79 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#12번\n",
+    "시가총액 = 298000000000000\n",
+    "현재가 = 50000\n",
+    "PER = 15.79\n",
+    "print(시가총액, type(시가총액))\n",
+    "print(현재가, type(현재가))\n",
+    "print(PER, type(PER))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello! python\n",
+      "hello!python\n"
+     ]
+    }
+   ],
+   "source": [
+    "#13번\n",
+    "s= \"hello\"\n",
+    "type(s)\n",
+    "t= \"python\"\n",
+    "\n",
+    "print(s+\"!\", t)\n",
+    "print(s+\"!\"+t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#15번\n",
+    "a = 128\n",
+    "print (type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "721 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#16번\n",
+    "num_str = \"720\"\n",
+    "num_int = int(num_str)\n",
+    "print(num_int+1, type(num_int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "100 <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#17번\n",
+    "num = 100\n",
+    "str_num=str(num)\n",
+    "print(type(str_num))\n",
+    "print(str_num, type(str_num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "15.79 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#18번\n",
+    "data = \"15.79\"\n",
+    "print(type(data))\n",
+    "data = float(data)\n",
+    "print(data, type(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017\n",
+      "2018\n",
+      "2019\n"
+     ]
+    }
+   ],
+   "source": [
+    "#19번\n",
+    "year=\"2020\"\n",
+    "print(int(year)-3)\n",
+    "print(int(year)-2)\n",
+    "print(int(year)-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1749024\n"
+     ]
+    }
+   ],
+   "source": [
+    "#20\n",
+    "에어컨 = 48584\n",
+    "개월 = 36\n",
+    "total = 에어컨 * 개월\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p t\n"
+     ]
+    }
+   ],
+   "source": [
+    "#21\n",
+    "letters = 'python'\n",
+    "print(letters[0], letters[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2210\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#22\n",
+    "license_plate=\"24가 2210\"\n",
+    "print(license_plate[-4:])\n",
+    "print(license_plate[4:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "홀홀홀\n"
+     ]
+    }
+   ],
+   "source": [
+    "#23\n",
+    "string = \"홀짝홀짝홀짝\"\n",
+    "print(string[::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOHTYP\n"
+     ]
+    }
+   ],
+   "source": [
+    "#24\n",
+    "string = \"PYTHON\"\n",
+    "print(string[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"Life is too short\"\n",
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Life'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"Life is too short, You need Python\"\n",
+    "a[3]\n",
+    "\n",
+    "a[-1]\n",
+    "\n",
+    "a[0:4]\n",
+    "\n",
+    "0<= a <4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Life is too short'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"Life is too short, You need Python\"\n",
+    "a[19:]\n",
+    "a[:17]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You need'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"Life is too short, You need Python\"\n",
+    "a[19:-7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Rainy'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"20230331Rainy\"\n",
+    "date = a[:8]\n",
+    "weather = a[8:]\n",
+    "date\n",
+    "weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "010 1111 2222\n"
+     ]
+    }
+   ],
+   "source": [
+    "phone_number = \"010-1111-2222\"\n",
+    "phone_number1 = phone_number.replace(\"-\", \" \")\n",
+    "print(phone_number1)"
+   ]
   }
  ],
  "metadata": {
@@ -251,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
