--- a/6월19일/4교시_웹크롤링.ipynb
+++ b/6월19일/4교시_웹크롤링.ipynb
@@ -129,33 +129,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1위: 스파이더맨: 어크로스 더 유니버스 예매율(8.9)\n",
-      "2위: 귀공자 예매율(26.2%)\n",
-      "3위: 엘리멘탈 예매율(8.7)\n",
-      "4위: 범죄도시3 예매율(20.8%)\n",
-      "5위: 플래시 예매율(8.8)\n",
-      "6위: 명탐정코난: 하이바라 아이 이야기 ~흑철의 미스터리 트레인 예매율(16.1%)\n",
-      "7위: 파이어하트 예매율(6.7)\n",
-      "8위: 수라 예매율(13.2%)\n",
-      "9위: 트랜스포머: 비스트의 서막 예매율(8.0)\n",
-      "10위: 비의도적 연애담 스페셜 예매율(6.8%)\n",
-      "11위: 인디아나 존스: 운명의 다이얼 예매율(10.0)\n",
-      "12위: 가디언즈 오브 갤럭시: Volume 3 예매율(3.8%)\n",
-      "13위: 인드림 예매율(10.0)\n",
-      "14위: 너의 눈을 들여다보면 예매율(1.2%)\n",
-      "15위: 어디로 가고 싶으신가요 예매율(10.0)\n",
-      "16위: 마마무: 마이콘 더 무비 예매율(1.1%)\n",
-      "17위: 1986 그 여름, 그리고 고등어통조림 예매율(7.3)\n",
-      "18위: 남은 인생 10년 예매율(1.0%)\n",
-      "19위: 엔니오: 더 마에스트로 예매율(10.0)\n",
-      "20위: 굿바이 예매율(0.9%)\n"
+      "[<a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=163777\">엘리멘탈</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=62731\">인디아나 존스: 운명의 다이얼</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=136532\">스파이더맨: 어크로스 더 유니버스</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=160244\">범죄도시3</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=155850\">귀공자</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=171614\">2022 영탁 단독 콘서트 - 탁쇼</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=158891\">악마들</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=151333\">여름날 우리</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=169158\">애스터로이드 시티</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=167361\">극장판 도라에몽: 진구와 하늘의 유토피아</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=154406\">파이어하트</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=168995\">틴에이지 크라켄 루비</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=167146\">명탐정코난: 하이바라 아이 이야기 ~흑철의 미스터리 트레인</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=43294\">플래시</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=166324\">보 이즈 어프레이드</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=169992\">라방</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=169808\">빈틈없는 사이</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=163796\">수라</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=150228\">기적을 믿는 소녀</a>, <a class=\"link_txt\" data-tiara-layer=\"moviename\" href=\"/moviedb/main?movieId=165969\">트랜스포머: 비스트의 서막</a>]\n",
+      "1위: 엘리멘탈 예매율(8.7)\n",
+      "2위: 인디아나 존스: 운명의 다이얼 예매율(33.7%)\n",
+      "3위: 스파이더맨: 어크로스 더 유니버스 예매율(8.1)\n",
+      "4위: 범죄도시3 예매율(20.1%)\n",
+      "5위: 귀공자 예매율(8.3)\n",
+      "6위: 2022 영탁 단독 콘서트 - 탁쇼 예매율(9.1%)\n",
+      "7위: 악마들 예매율(6.6)\n",
+      "8위: 여름날 우리 예매율(8.1%)\n",
+      "9위: 애스터로이드 시티 예매율(8.0)\n",
+      "10위: 극장판 도라에몽: 진구와 하늘의 유토피아 예매율(6.3%)\n",
+      "11위: 파이어하트 예매율(8.5)\n",
+      "12위: 틴에이지 크라켄 루비 예매율(3.0%)\n",
+      "13위: 명탐정코난: 하이바라 아이 이야기 ~흑철의 미스터리 트레인 예매율(8.8)\n",
+      "14위: 플래시 예매율(2.7%)\n",
+      "15위: 보 이즈 어프레이드 예매율(7.9)\n",
+      "16위: 라방 예매율(1.7%)\n",
+      "17위: 빈틈없는 사이 예매율(6.8)\n",
+      "18위: 수라 예매율(1.2%)\n",
+      "19위: 기적을 믿는 소녀 예매율(10.0)\n",
+      "20위: 트랜스포머: 비스트의 서막 예매율(1.1%)\n"
      ]
     }
    ],
@@ -170,7 +171,7 @@
     "\n",
     "rank_list = soup.select('div.thumb_cont > strong > a') #div에 스트롱이 감싸고 있는 a\n",
     "rank_rate = soup.select('span.txt_append > span > span')\n",
-    "\n",
+    "print(rank_list)\n",
     "for rank, title in enumerate(rank_list, 1):\n",
     "    print(f'{rank}위: {title.text} 예매율({rank_rate[rank-1].text})')\n",
     "\n"
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +537,7 @@
        "15  16                     마마무: 마이콘 더 무비     전체관람가   0.0   0.4  23.06.21"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,6 +578,224 @@
     "df['개봉일'] = pd.to_datetime(df['개봉일'], format='%y.%m.%d')#소문자y 는 2자리 Y는 4자리\n",
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Google Trends 페이지의 URL\n",
+    "url = 'https://trends.google.com/trends/trendingsearches/daily?geo=KR&hl=en'\n",
+    "\n",
+    "# 웹페이지에 접속하여 HTML 데이터를 가져옵니다.\n",
+    "response = requests.get(url)\n",
+    "#response.encoding = 'utf-8'\n",
+    "html = response.text\n",
+    "\n",
+    "# BeautifulSoup을 사용하여 HTML 데이터를 파싱합니다.\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "# 트렌딩 검색어를 포함한 요소를 찾습니다.\n",
+    "trending_items = soup.find_all('div', class_='md-list-content')\n",
+    "\n",
+    "# 트렌딩 검색어를 출력합니다.\n",
+    "for item in trending_items:\n",
+    "    print(item.get_text().strip())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-06-01: Connection successful\n",
+      "2023-06-02: Connection successful\n",
+      "2023-06-03: Connection successful\n",
+      "2023-06-04: Connection successful\n",
+      "2023-06-05: Connection successful\n",
+      "2023-06-06: Connection successful\n",
+      "2023-06-07: Connection successful\n",
+      "           Date  Rank  Keyword\n",
+      "0    2023/06/18     1       양산\n",
+      "1    2023/06/18     2      크록스\n",
+      "2    2023/06/18     3       샌들\n",
+      "3    2023/06/18     4      슬리퍼\n",
+      "4    2023/06/18     5     여성샌들\n",
+      "..          ...   ...      ...\n",
+      "115  2023/06/29     6  락피쉬레인부츠\n",
+      "116  2023/06/29     7      장우산\n",
+      "117  2023/06/29     8     악세서리\n",
+      "118  2023/06/29     9      슬리퍼\n",
+      "119  2023/06/29    10       샌들\n",
+      "\n",
+      "[120 rows x 3 columns]\n",
+      "    Keyword  Count\n",
+      "0        샌들     12\n",
+      "1       슬리퍼     12\n",
+      "2      레인부츠     12\n",
+      "3       크록스     12\n",
+      "4        양산     10\n",
+      "5        장화      9\n",
+      "6      여성샌들      9\n",
+      "7    헌터레인부츠      8\n",
+      "8    나이키운동화      6\n",
+      "9   락피쉬레인부츠      6\n",
+      "10       우산      5\n",
+      "11      에코백      4\n",
+      "12    아쿠아슈즈      4\n",
+      "13      장우산      3\n",
+      "14     악세서리      2\n",
+      "15      지비츠      2\n",
+      "16      우양산      1\n",
+      "17   스케쳐스샌들      1\n",
+      "18     여성장화      1\n",
+      "19     암막양산      1\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Windows\\\\Fonts\\\\D2Coding.TTC'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 93\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfont_manager\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mfm\u001b[39;00m\n\u001b[0;32m     92\u001b[0m font_path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mC:/Windows/Fonts/D2Coding.TTC\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m---> 93\u001b[0m font_name \u001b[39m=\u001b[39m fm\u001b[39m.\u001b[39;49mFontProperties(fname\u001b[39m=\u001b[39;49mfont_path)\u001b[39m.\u001b[39;49mget_name()\n\u001b[0;32m     97\u001b[0m \u001b[39m# 그래프 데이터 준비\u001b[39;00m\n\u001b[0;32m     98\u001b[0m keywords \u001b[39m=\u001b[39m keyword_counts[\u001b[39m'\u001b[39m\u001b[39mKeyword\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\kikon\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\matplotlib\\font_manager.py:662\u001b[0m, in \u001b[0;36mFontProperties.get_name\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    658\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_name\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m    659\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    660\u001b[0m \u001b[39m    Return the name of the font that best matches the font properties.\u001b[39;00m\n\u001b[0;32m    661\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 662\u001b[0m     \u001b[39mreturn\u001b[39;00m get_font(findfont(\u001b[39mself\u001b[39;49m))\u001b[39m.\u001b[39mfamily_name\n",
+      "File \u001b[1;32mc:\\Users\\kikon\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\matplotlib\\_api\\deprecation.py:297\u001b[0m, in \u001b[0;36mrename_parameter.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    292\u001b[0m     warn_deprecated(\n\u001b[0;32m    293\u001b[0m         since, message\u001b[39m=\u001b[39m\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe \u001b[39m\u001b[39m{\u001b[39;00mold\u001b[39m!r}\u001b[39;00m\u001b[39m parameter of \u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m() \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    294\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mhas been renamed \u001b[39m\u001b[39m{\u001b[39;00mnew\u001b[39m!r}\u001b[39;00m\u001b[39m since Matplotlib \u001b[39m\u001b[39m{\u001b[39;00msince\u001b[39m}\u001b[39;00m\u001b[39m; support \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    295\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mfor the old name will be dropped %(removal)s.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    296\u001b[0m     kwargs[new] \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mpop(old)\n\u001b[1;32m--> 297\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\kikon\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\matplotlib\\font_manager.py:1520\u001b[0m, in \u001b[0;36mget_font\u001b[1;34m(font_filepaths, hinting_factor)\u001b[0m\n\u001b[0;32m   1517\u001b[0m \u001b[39mif\u001b[39;00m hinting_factor \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   1518\u001b[0m     hinting_factor \u001b[39m=\u001b[39m mpl\u001b[39m.\u001b[39mrcParams[\u001b[39m'\u001b[39m\u001b[39mtext.hinting_factor\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m-> 1520\u001b[0m \u001b[39mreturn\u001b[39;00m _get_font(\n\u001b[0;32m   1521\u001b[0m     \u001b[39m# must be a tuple to be cached\u001b[39;49;00m\n\u001b[0;32m   1522\u001b[0m     paths,\n\u001b[0;32m   1523\u001b[0m     hinting_factor,\n\u001b[0;32m   1524\u001b[0m     _kerning_factor\u001b[39m=\u001b[39;49mmpl\u001b[39m.\u001b[39;49mrcParams[\u001b[39m'\u001b[39;49m\u001b[39mtext.kerning_factor\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[0;32m   1525\u001b[0m     \u001b[39m# also key on the thread ID to prevent segfaults with multi-threading\u001b[39;49;00m\n\u001b[0;32m   1526\u001b[0m     thread_id\u001b[39m=\u001b[39;49mthreading\u001b[39m.\u001b[39;49mget_ident()\n\u001b[0;32m   1527\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\kikon\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\matplotlib\\font_manager.py:1461\u001b[0m, in \u001b[0;36m_get_font\u001b[1;34m(font_filepaths, hinting_factor, _kerning_factor, thread_id)\u001b[0m\n\u001b[0;32m   1458\u001b[0m \u001b[39m@lru_cache\u001b[39m(\u001b[39m64\u001b[39m)\n\u001b[0;32m   1459\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_get_font\u001b[39m(font_filepaths, hinting_factor, \u001b[39m*\u001b[39m, _kerning_factor, thread_id):\n\u001b[0;32m   1460\u001b[0m     first_fontpath, \u001b[39m*\u001b[39mrest \u001b[39m=\u001b[39m font_filepaths\n\u001b[1;32m-> 1461\u001b[0m     \u001b[39mreturn\u001b[39;00m ft2font\u001b[39m.\u001b[39;49mFT2Font(\n\u001b[0;32m   1462\u001b[0m         first_fontpath, hinting_factor,\n\u001b[0;32m   1463\u001b[0m         _fallback_list\u001b[39m=\u001b[39;49m[\n\u001b[0;32m   1464\u001b[0m             ft2font\u001b[39m.\u001b[39;49mFT2Font(\n\u001b[0;32m   1465\u001b[0m                 fpath, hinting_factor,\n\u001b[0;32m   1466\u001b[0m                 _kerning_factor\u001b[39m=\u001b[39;49m_kerning_factor\n\u001b[0;32m   1467\u001b[0m             )\n\u001b[0;32m   1468\u001b[0m             \u001b[39mfor\u001b[39;49;00m fpath \u001b[39min\u001b[39;49;00m rest\n\u001b[0;32m   1469\u001b[0m         ],\n\u001b[0;32m   1470\u001b[0m         _kerning_factor\u001b[39m=\u001b[39;49m_kerning_factor\n\u001b[0;32m   1471\u001b[0m     )\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\Windows\\\\Fonts\\\\D2Coding.TTC'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "import json\n",
+    "\n",
+    "url = 'https://datalab.naver.com/shoppingInsight/getKeywordRank.naver?timeUnit=date&cid=50000001'\n",
+    "header = {\n",
+    "    'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36',\n",
+    "    'referer': 'https://datalab.naver.com/'\n",
+    "}\n",
+    "\n",
+    "# 6월 1일부터 6월 30일까지 데이터를 수집하기 위해 날짜 범위를 지정합니다.\n",
+    "start_date = '2023-06-01'\n",
+    "end_date = '2023-06-07'\n",
+    "date_range = pd.date_range(start=start_date, end=end_date, freq='D').strftime('%Y-%m-%d').tolist()\n",
+    "\n",
+    "# 데이터를 저장할 리스트를 생성합니다.\n",
+    "all_data = []\n",
+    "\n",
+    "# 각 날짜별로 데이터를 수집합니다.\n",
+    "for date in date_range:\n",
+    "    # 요청할 URL에 날짜를 포함시킵니다.\n",
+    "    request_url = f'{url}&startDate={date}&endDate={date}'\n",
+    "    \n",
+    "    # 데이터 요청\n",
+    "    response = requests.post(request_url, headers=header)\n",
+    "    if response.status_code == requests.codes.ok:\n",
+    "        print(f'{date}: Connection successful')\n",
+    "        \n",
+    "    data = json.loads(response.text)\n",
+    "\n",
+    "# 결과 출력\n",
+    "\n",
+    "#from pandas.io.json import json_normalize\n",
+    "\n",
+    "\n",
+    "# 그래프 데이터를 데이터프레임으로 변환\n",
+    "df = pd.DataFrame(data)\n",
+    "# CSV 파일로 저장\n",
+    "df.to_csv('키워드_검색_횟수.csv', index=False)\n",
+    "\n",
+    "\n",
+    "import csv\n",
+    "import ast\n",
+    "table_data = []\n",
+    "\n",
+    "# CSV 파일 읽기\n",
+    "with open('키워드_검색_횟수.csv', 'r', encoding='utf-8') as file:\n",
+    "    reader = csv.DictReader(file)\n",
+    "    for row in reader:\n",
+    "        date = row['date']\n",
+    "        ranks = ast.literal_eval(row['ranks'])\n",
+    "        for rank_info in ranks:\n",
+    "            rank = rank_info['rank']\n",
+    "            keyword = rank_info['keyword']\n",
+    "            table_data.append({'Date': date, 'Rank': rank, 'Keyword': keyword})\n",
+    "\n",
+    "\n",
+    "# table_data = []\n",
+    "# for entry in data:\n",
+    "#     date = entry['date']\n",
+    "#     ranks = entry['ranks']\n",
+    "#     for rank_info in ranks:\n",
+    "#         rank = rank_info['rank']\n",
+    "#         keyword = rank_info['keyword']\n",
+    "#         table_data.append({'Date': date, 'Rank': rank, 'Keyword': keyword})\n",
+    "\n",
+    "# 데이터 프레임 생성\n",
+    "df = pd.DataFrame(table_data)\n",
+    "\n",
+    "# 출력\n",
+    "print(df)\n",
+    "\n",
+    "# 데이터 프레임 생성\n",
+    "df = pd.DataFrame(table_data)\n",
+    "\n",
+    "# 키워드별 검색 횟수 계산\n",
+    "keyword_counts = df['Keyword'].value_counts().reset_index()\n",
+    "keyword_counts.columns = ['Keyword', 'Count']\n",
+    "\n",
+    "# 출력\n",
+    "print(keyword_counts)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.font_manager as fm\n",
+    "\n",
+    "font_path = 'C:/Windows/Fonts/D2Coding.TTC'\n",
+    "font_name = fm.FontProperties(fname=font_path).get_name()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 그래프 데이터 준비\n",
+    "keywords = keyword_counts['Keyword']\n",
+    "counts = keyword_counts['Count']\n",
+    "\n",
+    "# 그래프 생성\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(keywords, counts)\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.xlabel('Keyword')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title('Search Count by Keyword')\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# 그래프 출력\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -595,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
